k8s/istio/virtualservice-tax.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tax
  namespace: dev
spec:
  hosts:
  - tax
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx,reset,connect-failure
    route:
    - destination:
        host: tax
