k8s/istio/authz-allow-backoffice-bff.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-backoffice-bff
  namespace: dev
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/dev/sa/backoffice-bff"
