k8s/istio/authz-allow-storefront-bff.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-storefront-bff
  namespace: dev
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/dev/sa/storefront-bff"
